--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p style="font-size:69px; color:#ff99ff">?</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>?</title>
+</head>
+<body style="background-color:#000033;">
+
+<p style="font-size:696px; color:#ff99ff">?</p>
+
+</body>
+</html>
